[ITC-1040] fixing icon padding on mobile

--- a/style.css
+++ b/style.css
@@ -893,7 +893,7 @@ ul.homepage_icons li.homepage_icon_section {
   width:25%;
 }
 
-.homepage_icons:after {
+ul.homepage_icons:after {
   clear:both;
 }
 
